# recon-setup

./: .gitignore  LICENSE  README.md  pyproject.toml
recon_setup/: main.py
recon_setup/utils/: active_directory.py  builders.py  commands.py  context.py  file_config.py  hostfile.py  htb_cli.py  spray.py  tasks.py
recon_setup/watchers/: creds_watcher.py  nmap_watcher.py
tests/: test_bug_fixes.py  test_builders.py  test_entry_point.py  test_htb_cli.py
