[project]
name = "recon-setup"
version = "0.1.1"
description = "Automate the setup and enumeration process for offensive security labs."
requires-python = ">=3.10"
dependencies = [
    "impacket",
    "libtmux==0.53.1",
    "requests",
    "rich",
    "urllib3",
    "watchdog",
]

[project.scripts]
recon-setup = "recon_setup.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
